@@ -1,0 +1,1 @@
+#include "tst-pthread-gdb-attach.c"
